<resources>
    <string name="app_name">Banana Classifier</string>
    <string name="take_picture">Take a Picture</string>
    <string name="faq1">Q.1) Does this application save the captured pictures?</string>
    <string name="fans1">We respect the privacy of users and do not save the captured photos by any means.</string>
    <string name="faq2">Q.2) Will the application include more varieties of banana classification?</string>
    <string name="fans2">Yes, in future with the available public datasets it is possible to include more categories.</string>
    <string name="faq3">Q.3) Can the application run without internet access?</string>
    <string name="fans3">Yes, the compact machine learning models used, run on users mobile device and not on the cloud making it available offline.</string>
    <string name="faqlabel">F.A.Q.</string>
</resources>
